archive/kubernetes/apps/default/tandoor/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recipes
  labels:
    app: recipes
    environment: production
    tier: frontend
spec:
  replicas: 1
  revisionHistoryLimit: 0
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: recipes
      environment: production
  template:
    metadata:
      labels:
        app: recipes
        tier: frontend
        environment: production
    spec:
      restartPolicy: Always
      serviceAccount: recipes
      serviceAccountName: recipes
      containers:
        - name: recipes-nginx
          image: nginx:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              protocol: TCP
              name: http
            - containerPort: 8080
              protocol: TCP
              name: gunicorn
          resources:
            requests:
              cpu: 250m
              memory: 64Mi
          volumeMounts:
            - mountPath: /media
              name: share
              # mount as subPath due to lost+found on ext4 pvc
              subPath: apps/tandoor/media
            - mountPath: /static
              name: share
              # mount as subPath due to lost+found on ext4 pvc
              subPath: apps/tandoor/static
            - name: nginx-config
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx-config
              readOnly: true
        - name: recipes
          image: vabene1111/recipes:1.0.1
          imagePullPolicy: IfNotPresent
          command:
            - /opt/recipes/venv/bin/gunicorn
            - -b
            - :8080
            - --access-logfile
            - "-"
            - --error-logfile
            - "-"
            - --log-level
            - INFO
            - recipes.wsgi
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: 8080
              scheme: HTTP
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /
              port: 8080
              scheme: HTTP
            periodSeconds: 30
          resources:
            requests:
              cpu: 250m
              memory: 64Mi
          volumeMounts:
            - mountPath: /opt/recipes/mediafiles
              name: share
              # mount as subPath due to lost+found on ext4 pvc
              subPath: media
            - mountPath: /opt/recipes/staticfiles
              name: share
              # mount as subPath due to lost+found on ext4 pvc
              subPath: static
          securityContext:
            runAsUser: 65534
      volumes:
        - name: share
          nfs:
            server: openmediavault.oyoy.lan
            path: /storage/apps/tandoor
        - name: nginx-config
          configMap:
            name: recipes-nginx-config
