archive/kubernetes/apps/default/tandoor/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
    kubernetes.io/ingress.class: "traefik"
    external-dns/is-public: "true"
  name: recipes
spec:
  rules:
    - host: recipes.fadhlika.com
      http:
        paths:
          - backend:
              service:
                name: recipes
                port:
                  number: 8080
            path: /
            pathType: Prefix
          - backend:
              service:
                name: recipes
                port:
                  number: 80
            path: /media
            pathType: Prefix
          - backend:
              service:
                name: recipes
                port:
                  number: 80
            path: /static
            pathType: Prefix
  tls:
    - hosts:
        - recipes.fadhlika.com
      secretName: recipes-tls
